--- a/scss/layout/_faq.scss
+++ b/scss/layout/_faq.scss
@@ -76,8 +76,8 @@
     }
   }
   h3 {
-    font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans",
-      "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
+    font-family: "游ゴシック体", YuGothic, "游ゴシック Medium",
+      "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
     font-size: 20px;
     font-weight: bold;
     line-height: 1.5;
